Finished up stylistic changes. Fixed spacing on reviews and size of text in search bar.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@ a:hover {
 }
 
 .reviewrow{
- padding: 20px 0px; 
+ padding: 20px 0px 20px 35px; 
 }
 .row1 {
   padding: 20px 0px;
